--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Poppins;
+}
+body {
+  height: 100vh;
+  background: linear-gradient(#1f1d1b 50%, #885e43 50%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  font-size: 16px;
+  width: 90vw;
+  max-width: 600px;
+  padding: 48px 28.8px;
+  background-color: #dbd0c5;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  box-shadow: 19.2px 32px 48px rgba(0, 0, 0, 0.2);
+}
+.search-container {
+  display: grid;
+  grid-template-columns: 9fr 3fr;
+  gap: 19.2px;
+}
+.search-container input, .search-container button {
+  font-size: 14.4px;
+  outline: none;
+  border-radius: 5px;
+}
+.search-container input {
+  background-color: transparent;
+  border: 1px solid #1f1d1b;
+  color: #1f1d1b;
+  padding: 11.2px;
+}
+.search-container input:focus {
+  border-color: #1f1d1b;
+}
+.search-container button {
+  background-color: #c39a7a;
+  border: none;
+  cursor: pointer;
+  color: #dbd0c5;
+}
+.info {
+  color: #1f1d1b;
+  position: relative;
+  display: grid;
+  grid-template-columns: 4fr 8fr;
+  margin-top: 19.2px;
+}
+.poster {
+  width: 100%;
+}
+h2 {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 0.96px;
+  color: #1f1d1b;
+}
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 9.6px;
+  margin: 9.6px 0 14.6px 0;
+  color: #1f1d1b;
+}
+.rating h4 {
+  display: inline-block;
+  font-size: 17.6px;
+  font-weight: 500;
+  color: #1f1d1b;
+}
+.details {
+  display: flex;
+  font-size: 15px;
+  gap: 16px;
+  justify-content: center;
+  color: #885e43;
+  margin: 9.6px 0;
+  font-weight: 300;
+}
+.genre  {
+  display: flex;
+  justify-content: space-around;
+  color: #1f1d1b;
+  font-size: 12px;
+  padding: 6.4px 25.6px;
+  font-weight: 300;
+}
+h3 {
+  font-weight: 500;
+  margin-top: 19.2px;
+}
+p {
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 28.8px;
+  text-align: justify;
+  color: grey;
+}
+.msg {
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    font-size: 14px;
+  }
+  .poster {
+    margin: auto;
+    width: auto;
+    max-height: 172.8px;
+  }
+  .info {
+    grid-template-columns: 1fr;
+  }
 }
